...
                    android:layout_gravity="center"
                    android:layout_marginTop="330dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/managerManageAllClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
...
