<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/leave_main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Leaves">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImageView3"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/profile_background"
            android:rotationX="180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="35dp"
            app:cardBackgroundColor="#F2F2F2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.06">

            <RelativeLayout
                android:id="@+id/leavesRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="35dp"
                app:layout_constraintTop_toBottomOf="@+id/namePositionLinearLayout">

                <TextView
                    android:id="@+id/headingEmployeeLeavesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="Staff Actions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/headingEmployeeLeavesDivider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/headingEmployeeLeavesTextView"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/applyLeaveButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Apply Leaves"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/viewLeaveButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="View Leaves"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/editDeleteLeaveButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="210dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Delete Leaves"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

                <TextView
                    android:id="@+id/headingManagerLeavesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="290dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="Manager Actions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/headingManagerLeavesDivider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/headingEmployeeLeavesTextView"
                    android:layout_gravity="center"
                    android:layout_marginTop="290dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/approveLeaveButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="340dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Manage Leaves"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</FrameLayout>