...
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/editAttendanceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

                <ImageButton
                    android:id="@+id/deleteAttendanceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_delete" />
            </LinearLayout>
        </LinearLayout>

...
